# foobar

./: .buildinfo  .bumpversion.cfg  MANIFEST.in  Pipfile  README.rst  fabfile.py  foobar.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
_modules/: index.html
_modules/foobar/: cli.html
_sources/: foobar.rst.txt  modules.rst.txt
docs/: conf.py  index.rst
foobar/: __init__.py  cli.py
tests/: test_foobar.py
