[metadata]
name = foobar
version = 0.1.0
description = just foo
long_description = file: README.rst
author = Stephan Fitzpatrick
author_email = knowsuchagency@gmail.com
url = https://github.com/knowsuchagency/foobar
license = MIT license
keywords = foobar
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
test_suite = tests
setup_requires = pytest-runner

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest
